# shariah-algo-trader

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  README.md  day-trader.service  main.py  pyproject.toml  render.yaml  shariah-trader-dashboard.service  shariah-trader.service
benchmark_trader/: config.py  main.py  state.py
benchmark_trader/data/: watchlist.py
benchmark_trader/jobs/: eod_liquidation.py  intraday_monitor.py  market_open_scan.py
benchmark_trader/scheduling/: scheduler.py
benchmark_trader/signals/: gap_and_go.py
dashboard/api/: cache.py  db.py  deps.py  email_service.py  hardening.py  live_equity.py  main.py  models.py  notifications_seeder.py
dashboard/web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
day_trader/: config.py  main.py  state.py  state_persistence.py
day_trader/data/: alpaca_data.py  watchlist.py
day_trader/execution/: order_executor.py  portfolio.py
day_trader/jobs/: eod_liquidation.py  intraday_monitor.py  intraday_scan.py  market_scan.py
docs/: concept-pitch-wiki.md  multi-broker-support.md
shariah_algo_trader/: config.py  main.py
tests/: test_alpaca_data.py  test_auth_api.py  test_backtesting.py  test_compliance_check.py  test_config.py  test_day_order_executor.py  test_eod_liquidation.py  test_gap_and_go.py  test_intraday_monitor.py  test_intraday_scan.py  test_market_scan.py  test_momentum.py  test_orb.py  test_orb_breakout.py  test_order_executor.py  test_portfolio.py  test_quality.py  test_rebalance.py  test_regime.py  test_scheduler.py  test_scorer.py  test_settings_api.py  test_state_persistence.py  test_universe.py  test_value.py  test_volatility.py
(+130 files in other folders)
