[project]
name = "shariah-algo-trader"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "exchange-calendars>=4.13.2",
    "numpy>=2.4.6",
    "python-dotenv>=1.0",
    "requests>=2.34.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-env>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
