[project]
name = "shariah-algo-trader"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "exchange-calendars>=4.13.2",
    "fastapi>=0.115",
    "numpy>=2.4.6",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.30",
    "yfinance>=0.2.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-env>=1.1",
]

[project.scripts]
shariah-trader = "shariah_algo_trader.main:main"
day-trader = "day_trader.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
